build_raw.txt
node : C:\Users\pbhus\Desktop\Hackathon
_Code\apps\web\node_modules\.bin\next:2
At line:1 char:42
+ ... t-Location "apps\web"; node 
node_modules\.bin\next build 2>&1 | 
Out-F ...
+                            
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpeci 
   fied: (C:\Users\pbhus\...les\.bin\  
  next:2:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCo 
   mmandError
 
basedir=$(dirname "$(echo "$0" | sed 
-e 's,\\,/,g')")
          ^^^^^^^

SyntaxError: missing ) after argument 
list
    at wrapSafe (node:internal/modules/
cjs/loader:1662:18)
    at Module._compile (node:internal/m
odules/cjs/loader:1704:20)
    at Object..js (node:internal/module
s/cjs/loader:1895:10)
    at Module.load (node:internal/modul
es/cjs/loader:1465:32)
    at Function._load (node:internal/mo
dules/cjs/loader:1282:12)
    at TracingChannel.traceSync 
(node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/mo
dules/cjs/loader:235:24)
    at Function.executeUserEntryPoint 
[as runMain] 
(node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_modu
le:36:49

Node.js v22.17.1
